--- a/.gitignore
+++ b/.gitignore
@@ -160,8 +160,8 @@ cython_debug/
 .idea/
 
 
-files_input/*
-!files_input/.gitkeep
+app/input_files/*
+!app/input_files/.gitkeep
 files_output/*
 !files_output/.gitkeep
 
